Selection box added without interaction

--- a/index.html
+++ b/index.html
@@ -13,18 +13,14 @@
     <script async type="text/javascript" src="script.js"></script>
 	</head>
 	<body>
-
+    
     <div>
       <div class="col-md-6">
-        <img class="card-img-top" id="img1" src="img1.jpeg" alt="img1" style="position: relative;">
-        <canvas id="canvas" style="position:absolute; left: 0px; top: 0px">
-
-        </canvas>
-      </div>
-      <div class="col-md-6">
-
+        <img class="card-img-top" id="img1" src="img2.jpeg" alt="img1" style="position: relative;">
+        <canvas id="canvas" style="position: absolute;"></canvas>
       </div>
     </div>
+
 
 	</body>
 </html>
