--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <div>
       <div class="col-md-6">
-        <img class="card-img-top" id="img1" src="img2.jpeg" alt="img1" style="position: relative;">
+        <img class="card-img-top" id="img1" src="spongebob.jpg" alt="img1" style="position: relative;">
         <canvas id="canvas" style="position: absolute;"></canvas>
       </div>
     </div>
