fixed branch dev-02

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         min-width: 100%;
       }
     </style>
-    <script async type="text/javascript" src="script.js"></script>
+    <script async type="text/javascript" src="/src/script/script.js"></script>
 	</head>
 	<body>
     
     <div>
       <div class="col-md-6 image-container">
-        <img class="image" id="img1" src="spongebob.jpg" alt="img1" style="position: relative;">
+        <img class="image" id="img1" src="/src/images/back_bay.jpeg" alt="img1" style="position: relative;">
         
         <canvas id="canvas" style="position: absolute;"></canvas>
       </div>
