--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
   <head>
     <title>Selector: The Bounding Box</title>
     <style>
-      /* body {
+      body {
         background-color:#ffffff;
         margin: 0;
         padding: 0;
         height: 100%;
         overflow: hidden !important; 
-      } */
+      }
 
       .image-container {
         display: flex;
@@ -16,7 +16,7 @@
         align-items: center;
         width: 100vw; /* Viewport Width */
         height: 100vh; /* Viewport Height */
-        overflow: hidden; /* This will crop any overflowing part of the image */
+        overflow: hidden !important; /* This will crop any overflowing part of the image */
       }
 
       .image-container .imgCanvas {
@@ -32,12 +32,11 @@
     
     <div>
       <div class="col-md-6 image-container">
-        <canvas id="imgCanvas" style="position: absolute;"></canvas>
+        <canvas id="imgCanvas" style="position: absolute; left: 0px; top: 0px"></canvas>
         
-        <canvas id="canvas" style="position: absolute;"></canvas>
+        <canvas id="canvas" style="position: absolute; left: 0px; top: 0px"></canvas>
       </div>
     </div>
-
 
 	</body>
 </html>
