--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         min-width: 100%;
       }
     </style>
-    <script async type="text/javascript" src="/src/script/script.js"></script>
+    <script async type="text/javascript" src="src/script/script.js"></script>
 	</head>
 	<body>
     
