--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
   <head>
     <title>Selector: The Bounding Box</title>
     <style>
-      body {
+      /* body {
         background-color:#ffffff;
         margin: 0;
         padding: 0;
         height: 100%;
         overflow: hidden !important; 
-      }
+      } */
 
       .image-container {
         display: flex;
@@ -32,7 +32,7 @@
     
     <div>
       <div class="col-md-6 image-container">
-        <canvas id="imgCanvas" style="position: absolute; left: 0px; top: 0px"></canvas>
+        <canvas id="imgCanvas" style="position: relative;"></canvas>
         
         <canvas id="canvas" style="position: absolute; left: 0px; top: 0px"></canvas>
       </div>
